CTPCB-02 y CTPCB-03 + Arreglar BD
Se realizaron las historias CTPCB-02 y CTPCB-03 y Se arreglo un poco la BD
