# Infrastructure/Common/Mappings/MappingProfile.cs
@@ -12,7 +12,7 @@ namespace Infrastructure.Common.Mappings
             
             CreateMap<CPC_PUNTAJE_CAPACIDAD, QueryPuntajeCapacidadDto>().ReverseMap();
             CreateMap<Materia, MateriaDto>().ReverseMap();
-
+            CreateMap<Profesor, ProfesorDto>().ReverseMap();
         }
     }
 }
