# Infrastructure/DTOs/Mantenimientos/ProfesorDto.cs
@@ -1,0 +1,19 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Infrastructure.DTOs.Mantenimientos
+{
+    public class ProfesorDto
+    {
+        public int Id_Profesor { get; set; }
+        public string Cedula { get; set; }
+        public string Nombre { get; set; }
+        public string Apellido { get; set; }
+        public string Correo { get; set; }
+        public string Telefono { get; set; }
+        public string Estado { get; set; }
+    }
+}
